--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "symphony-childcare"
 compatibility_date = "2024-01-01"
+pages_build_output_dir = "out"
 
 [build]
 command = "npm run build"
