--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,10 @@
 name = "symphony-childcare"
-compatibility_date = "2024-01-01"
+compatibility_date = "2026-01-15"
 pages_build_output_dir = "out"
 
 [build]
 command = "npm run build"
-cwd = "."
+publish = "out"
 
-[env.production]
-name = "symphony-childcare"
-
-[env.production.build]
-command = "npm run build"
+[env.production.vars]
+NODE_ENV = "production"
