[GH-3] Migrate to OpenNext Cloudflare adapter
## Major Upgrade Completed
- ✅ Upgraded Next.js 14 → 15.5.12
- ✅ Upgraded React 18 → 19.2.4
- ✅ Updated all dependencies to latest versions
- ✅ Installed @opennextjs/cloudflare adapter
- ✅ Removed static export configuration

## Dependency Clean-up
- ✅ No more --legacy-peer-deps needed
- ✅ All packages now support React 19
- ✅ @formspree/react updated to v3.0.0 (React 19 support)
- ✅ ESLint upgraded to v9, TypeScript to v5.7.3

## OpenNext Configuration
- ✅ Generated open-next.config.ts with R2 incremental cache
- ✅ Updated wrangler.toml for OpenNext output structure
- ✅ Build command: npx @opennextjs/cloudflare build
- ✅ Output directory: .open-next

## Benefits
- 🚀 Full Next.js SSR support (no more static export)
- 🚀 API routes capability
- 🚀 Better performance with Cloudflare edge functions
- 🚀 Modern dependency stack (React 19, Next.js 15)

Fixes #3

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,14 @@
 name = "symphony-childcare"
 compatibility_date = "2026-01-15"
-pages_build_output_dir = "out"
+pages_build_output_dir = ".open-next"
 
 [build]
-command = "npm run build"
-publish = "out"
+command = "npx @opennextjs/cloudflare build"
+
+main = ".open-next/worker.js"
+
+[build.upload]
+dir = ".open-next/assets"
 
 [env.production.vars]
 NODE_ENV = "production"
