--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,3 @@
 name = "symphony-childcare"
 compatibility_date = "2026-01-15"
-pages_build_output_dir = ".open-next"
-
-[build]
-command = "npx @opennextjs/cloudflare build"
-
-main = ".open-next/worker.js"
-
-[build.upload]
-dir = ".open-next/assets"
-
-[env.production.vars]
-NODE_ENV = "production"
+pages_build_output_dir = "out"
