--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,3 @@
 name = "symphony-childcare"
 compatibility_date = "2026-01-15"
-pages_build_output_dir = ".open-next"
+pages_build_output_dir = "out"
